--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -11,14 +11,14 @@
 <body>
 <div class="nav-bar">
         <div class="d-flex align-items-center">
+            <button onclick="goBack()" class="back-button" style="margin-right: 10px;">
+                <i class="fas fa-arrow-left"></i>
+            </button>
             <a href="{{ url_for('index') }}" class="logo-container" style="text-decoration: none; color: inherit;">
-                <button onclick="goBack()" class="back-button">
-                    <i class="fas fa-arrow-left"></i>
-                </button>
                 <i class="fas fa-brain" style="font-size: 25px; color: #000;"></i>
                 <strong> Gradia</strong>
             </a>
-        </div>  
+        </div>
         <div class="nav-links">
             {% if not current_user %}
             <a href="/login">Log in</a>
@@ -153,9 +153,8 @@
     </div>
   </div>
 
-  <!-- Footer -->
   <footer>
-    &copy; 2025 Gradia. All rights reserved.
+  2025 Gradia. All rights reserved.
   </footer>
 
   <script>
