--- a/templates/announcement_teacher.html
+++ b/templates/announcement_teacher.html
@@ -6,30 +6,30 @@
 
 {% block content %}
 <div class="announcements-container">
-   <div class="create-announcement mb-3">
-    <a href="{{ url_for('announcement_view_teacher', course_name=course_name, course_code=course_code) }}" class="btn btn-primary">
-        <i class="fas fa-plus"></i> Create New Announcement
-    </a>
-</div>
+    <div class="create-announcement mb-3">
+        <a href="{{ url_for('announcement_view_teacher', course_name=course_name, course_code=course_code) }}" class="btn btn-primary">
+            <i class="fas fa-plus"></i> Create New Announcement
+        </a>
+    </div>
 
     <div class="announcements-list">
         {% if announcements %}
             {% for announcement in announcements %}
-            <div class="announcement-item">
-                <div class="announcement-header">
-                    <h4>{{ announcement[-1] }}</h4>
-                    <span class="announcement-date">Posted: {{ announcement[2].strftime('%B %d, %Y') }}</span>
+            <div class="announcement-item position-relative">
+                <div class="d-flex align-items-center justify-content-between">
+                    <div>
+                        <h4 class="mb-0">{{ announcement[3] }}</h4>
+                        <span class="announcement-date">Posted: {{ announcement[2].strftime('%B %d, %Y') }}</span>
+                    </div>
+                    <a href="{{ url_for('announcement_delete', course_name=course_name, course_code=course_code, announcement_id=announcement[0]) }}" 
+                       class="btn btn-sm btn-danger ms-3" 
+                       style="padding: 0.25rem 0.5rem;"
+                       onclick="return confirm('Are you sure you want to delete this announcement?')">
+                        ×
+                    </a>
                 </div>
-                <div class="announcement-content">
+                <div class="announcement-content mt-2">
                     <p>{{ announcement[1] }}</p>
-                </div>
-                <div class="announcement-footer">
-                    <a href="{{ url_for('announcement_edit', course_name=course_name, course_code=course_code, announcement_id=announcement[0]) }}" class="btn btn-secondary">
-                        <i class="fas fa-edit"></i> Edit
-                    </a>
-                    <a href="{{ url_for('announcement_delete', course_name=course_name, course_code=course_code, announcement_id=announcement[0]) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this announcement?')">
-                        <i class="fas fa-trash"></i> Delete
-                    </a>
                 </div>
             </div>
             {% endfor %}
