--- a/templates/announcement_view_teacher.html
+++ b/templates/announcement_view_teacher.html
@@ -57,7 +57,7 @@
     ul.style.listStyle = 'none';
     ul.style.padding = '0';
 
-    files.forEach(file => {
+    files.forEach((file, idx) => {
       const li = document.createElement('li');
       li.style.display = 'flex';
       li.style.alignItems = 'center';
@@ -65,8 +65,15 @@
 
       li.innerHTML = `
         <i class="fas fa-file-alt me-2" style="color: #555;"></i>
-        <span>${file.name}</span>
+        <span style="flex:1">${file.name}</span>
+        <button type="button" class="remove-file-btn" style="color:red; background:none; border:none; font-size:18px; margin-left:8px; cursor:pointer;" title="Remove file">&times;</button>
       `;
+
+      // Add click event to remove button
+      li.querySelector('.remove-file-btn').addEventListener('click', () => {
+        files.splice(idx, 1);
+        displayFiles(files);
+      });
 
       ul.appendChild(li);
     });
@@ -102,6 +109,13 @@
     const droppedFiles = Array.from(e.dataTransfer.files);
     allFiles = [...allFiles, ...droppedFiles];
     displayFiles(allFiles);
+  });
+
+  // Set the input's files to match allFiles before submitting
+  document.querySelector('form').addEventListener('submit', function(e) {
+    const dataTransfer = new DataTransfer();
+    allFiles.forEach(file => dataTransfer.items.add(file));
+    attachmentInput.files = dataTransfer.files;
   });
 </script>
 {% endblock %}
